--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 
 [dependencies]
 clap = { version = "4.0", features = ["derive"] }
-plist = "1.3.1"
 dict = "0.1.5"
 glob = "0.3.0"
+roxmltree = "0.15.1"
+#plist = "1.3.1"
