--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,6 @@ edition = "2021"
 clap = { version = "4.0", features = ["derive"] }
 dict = "0.1.5"
 glob = "0.3.0"
-#roxmltree = "0.15.1"
-#plist = "1.3.1"
-xmltree = "0.10.3"
-base64 = "0.13.1"
+plist = "1.3.1"
+itertools = "0.10.5"
+byteorder = "1.4.3"
